--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "common",
+  "name": "db",
   "module": "index.ts",
   "type": "module",
-  "exports": {
-    "./types": "./types.ts"
-  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "prisma": "^6.4.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "zod": "^3.24.2"
+    "@prisma/client": "^6.4.1"
   }
 }
