--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "common": "workspace:*"
+    "common": "workspace:*",
+    "db": "workspace:*"
   }
 }
