prisma client updated

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,7 +12,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "common": "workspace:*",
-    "db": "workspace:*"
+    "common": "*",
+    "db": "*"
   }
 }
